--- a/resume.html
+++ b/resume.html
@@ -6,46 +6,83 @@
 </head>
 <body>
 <p align="center"><b>个人简历</b></p>
-<table border="1" align="center">
-    <tr>
+<table border="0" align="center">
+    <tr height="35">
         <td colspan="5"><b>基本信息</b></td>
     </tr>
     <tr>
-        <td width="140">姓名</td>
-        <td width="200">孙英倩</td>
-        <td width="140">性别</td>
-        <td width="200">女</td>
-        <td rowspan="3"><img src="image\一寸.jpg" alt=""></td>
+        <td width="130">姓名</td>
+        <td width="180">孙英倩</td>
+        <td width="130">性别</td>
+        <td width="180">女</td>
+        <td rowspan="3"><img src="image/一寸.jpg" alt="" width="90"></td>
     </tr>
     <tr>
-        <td width="140">籍贯</td>
-        <td width="200">天津市</td>
-        <td width="140">出生年月</td>
-        <td width="200">1996-08</td>
+        <td width="130">籍贯</td>
+        <td width="180">天津市</td>
+        <td width="130">出生年月</td>
+        <td width="180">1996-08</td>
     </tr>
-    <tr>
-        <td width="140">政治面貌</td>
-        <td width="200">共青团员</td>
-        <td width="140">民族</td>
-        <td width="200">汉</td>
+    <tr >
+        <td width="130">政治面貌</td>
+        <td width="180">共青团员</td>
+        <td width="130">民族</td>
+        <td width="180">汉</td>
     </tr>
-    <tr>
+    <tr height="35">
         <td colspan="5"><b>个人联系方式</b></td>
     </tr>
-    <tr>
-        <td width="140">邮箱</td>
-        <td width="200">1314024675@qq.com</td>
-        <td width="140">电话</td>
-        <td width="200">15022441760</td>
+    <tr height="40">
+        <td width="130">电话</td>
+        <td width="180">15022441760</td>
+        <td width="130">邮箱</td>
+        <td colspan="2">1313024675@qq.com</td>
     </tr>
-    <tr>
+    <tr height="35">
         <td colspan="5"><b>教育背景</b></td>
     </tr>
+    <tr height="40">
+        <td width="130">院校</td>
+        <td width="180">天津理工大学</td>
+        <td width="130">专业</td>
+        <td colspan="2">软件工程</td>
+    </tr>
+    <tr height="35">
+        <td colspan="5"><b>专业技术能力</b></td>
+    </tr>
     <tr>
-        <td width="140">院校</td>
-        <td width="200">天津理工大学</td>
-        <td width="140">专业</td>
-        <td width="200">软件工程</td>
+        <td colspan="5">
+            <p>
+            * 熟悉使用Java编程；<br>
+            * 熟悉使用c语言编程；<br>
+            * 熟练使用Linux操作系统；<br>
+            * 掌握HTML、CSS、JavaScript；
+            </p>
+        </td>
+    </tr>
+    <tr height="35">
+        <td colspan="5"><b>个人获奖情况及资格证书</b></td>
+    </tr>
+    <tr>
+        <td colspan="5">
+            <p>
+                * 全国计算机等级考试二级证书;<br>
+                * 荣获“全国职业技能大赛优秀志愿者”;<br>
+                * 荣获“校级优秀共青团员”;<br>
+                * 天津市跆拳道等级一级;
+            </p>
+        </td>
+    </tr>
+    <tr height="35">
+        <td colspan="5"><b>项目经历</b></td>
+    </tr>
+    <tr>
+        <td colspan="5">
+            <p>智能餐饮系统开发</p>
+            <p style="text-indent: 2em; ">
+                工作内容：智能餐厅点餐管理系统的功能主要完成对餐厅菜品新增、菜品信息的录入操作，<br>
+                菜品信息更新、过时菜品信息的删除、菜品信息的查询等处理操作。</p>
+        </td>
     </tr>
 </table>
 </body>
